expanding home blog and fixing spacing

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -400,7 +400,7 @@ $menu-label-color: $white-ter
       width: 50%
       margin: 0rem auto 4rem auto
     .images > *
-      margin: 10% 0%
+      margin: 20% 0%
       
   
   .no-mobile-hover
